Fixed flicker on tap, supplied proper favicon, turned off search by default

--- a/toybc/ux/styles/main.css
+++ b/toybc/ux/styles/main.css
@@ -3,6 +3,9 @@
   All rights reserved under MIT license (see LICENSE file)
 */
 
+* {
+  -webkit-tap-highlight-color: transparent;
+}
 body {
   color: black;
   margin: 0;
